platform/kubernetes/cnp/kustomize/base/cnp-health.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-kubelet-health-checks
spec:
  endpointSelector:
    matchLabels:
      vcluster.loft.sh/managed-by: vcluster-placeholder
  ingress:
  - fromCIDR:
    - 10.0.0.0/16
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      rules:
        http:
        - method: 'GET'
          path: '/health'
