platform/kubernetes/cnp/kustomize/base/cnp-scrape.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: metrics-app-scrape
spec:
  endpointSelector:
    matchLabels:
      app: metrics-app
      vcluster.loft.sh/managed-by: vcluster-placeholder
      vcluster.loft.sh/namespace: metrics-app
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: platform-observability
            app: platform-scraper
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
          rules:
            http:
              - method: "GET"
                path: "^/metrics$"
